--- a/src/frontend/components/consumers/Footer/Footer.module.scss
+++ b/src/frontend/components/consumers/Footer/Footer.module.scss
@@ -3,8 +3,7 @@
 @import "../../../../styles/variables";
 
 .footer {
-  background-color: #eee;
-  border-top: 1px solid $color-gray-light-1;
+  background-color: $color-green-1;
   padding: 20px 0;
   margin-top: 16px;
 
