--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -92,7 +92,7 @@
   align-items: center;
   justify-content: center;
   gap: $s;
-  background-color: $color-green-light-1;
+  background-color: $color-green-1;
   border: none;
   border-radius: 1rem;
   color: $color-gray-dark-1;
