--- a/src/frontend/components/consumers/HomePageComponents/About/About.module.scss
+++ b/src/frontend/components/consumers/HomePageComponents/About/About.module.scss
@@ -12,19 +12,27 @@
   margin-top: 15px;
   margin-bottom: 16px;
 
-  h2 {
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 8px;
+  .title {
+    color: $color-gray-dark-1;
+    font-size: 1.75rem;
+    font-weight: 400;
+    margin-bottom: 1.5rem;
+    @include md-min {
+      font-size: 2.25rem;
+    }
     @include lg-min {
-      font-size: 2.2rem;
+      font-size: 3rem;
     }
   }
 
-  p {
+  .info {
+    color: $color-gray-dark-1;
+    font-size: 1.125rem;
+    margin-bottom: 2rem;
+    max-width: 900px;
+    text-align: center;
     @include lg-min {
-      font-size: 1.4rem;
+      font-size: 1.5rem;
     }
   }
 
@@ -77,5 +85,10 @@
         border-top: none;
       }
     }
+  }
+
+  .readMoreBtn {
+    @include button-1;
+    margin-top: 3rem;
   }
 }
