--- a/src/frontend/components/consumers/HomePageComponents/Banner/Banner.module.scss
+++ b/src/frontend/components/consumers/HomePageComponents/Banner/Banner.module.scss
@@ -2,66 +2,85 @@
 @import "../../../../../styles/mixins";
 @import "../../../../../styles/variables";
 
-.banner {
-  background-color: #efefef;
-  padding-top: 33px;
-  padding-bottom: 49px;
-  .wrapper {
-    @include wrapper;
+.bannerTitle {
+  color: $color-white;
+  font-size: 2.5rem;
+  font-weight: 400;
+  @include md-min {
+    font-size: 3rem;
+  }
+  @include lg-min {
+    font-size: 3.5rem;
+  }
+  @include xl-min {
+    font-size: 4rem;
+  }
+}
 
+.slide {
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  height: 500px;
+  justify-content: center;
+  @include md-min {
+    height: 600px;
+  }
+  @include lg-min {
+    height: 700px;
+  }
+  @include xl-min {
+    height: 800px;
+  }
+
+  .slideTitle {
+    color: $color-white;
+    font-size: 2.5rem;
+    font-weight: 400;
+    padding: 0 3rem 0 3rem;
+    text-align: center;
+    max-width: 1000px;
+    @include md-min {
+      font-size: 3rem;
+    }
     @include lg-min {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 40px;
+      font-size: 3.5rem;
     }
-
-    .image {
-      display: none;
-      @include lg-min {
-        //flex: 1;
-        display: block;
-        object-fit: cover;
-        height: 300px;
-        width: fit-content;
-      }
-      @include xl-min {
-        height: 450px;
-      }
-    }
-
-    .information {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      .bannerTitle {
-        color: $color-gray-dark-1;
-        font-size: 32px;
-        font-weight: 400;
-        @include md-min {
-          font-size: 3rem;
-        }
-        @include lg-min {
-          font-size: 2.5rem;
-        }
-        @include xl-min {
-          font-size: 3.5rem;
-        }
-      }
-
-      .button {
-        background-color: transparent;
-        border-radius: 40px;
-        border: 2px solid $color-gray-dark-1;
-        color: $color-gray-dark-1;
-        font-weight: 600;
-        padding: 8px 20px;
-        margin-top: 24px;
-
-        &:hover {
-          background-color: #00b207;
-        }
-      }
+    @include xl-min {
+      font-size: 4rem;
     }
   }
+}
+
+.slide1 {
+  background-image: url("/assets/home-page/banner/hero-1-mobile.webp");
+  background-color: #00000030;
+  background-blend-mode: darken;
+  @include lg-min {
+    background-image: url("/assets/home-page/banner/hero-1-desktop.webp");
+  }
+}
+
+.slide2 {
+  background-image: url("/assets/home-page/banner/hero-2-mobile.webp");
+  background-color: #00000030;
+  background-blend-mode: darken;
+  @include lg-min {
+    background-image: url("/assets/home-page/banner/hero-2-desktop.webp");
+  }
+}
+
+.slide3 {
+  background-image: url("/assets/home-page/banner/hero-3-mobile.webp");
+  background-color: #00000030;
+  background-blend-mode: darken;
+  @include lg-min {
+    background-image: url("/assets/home-page/banner/hero-3-desktop.webp");
+  }
+}
+
+.mySwiper {
+  text-align: center;
 }
