--- a/src/frontend/components/consumers/HomePageComponents/Blog/Blog.module.scss
+++ b/src/frontend/components/consumers/HomePageComponents/Blog/Blog.module.scss
@@ -5,12 +5,16 @@
   @include wrapper;
 
   .title {
-    font-size: 1.5rem;
-    font-weight: 600;
+    color: $color-gray-dark-1;
+    font-size: 1.75rem;
+    font-weight: 400;
+    margin-bottom: 1.5rem;
     text-align: center;
-    margin-bottom: 24px;
+    @include md-min {
+      font-size: 2.25rem;
+    }
     @include lg-min {
-      font-size: 2.2rem;
+      font-size: 3rem;
     }
 
     a {
