--- a/src/frontend/components/consumers/SortAndFilter/FilterDialog.module.scss
+++ b/src/frontend/components/consumers/SortAndFilter/FilterDialog.module.scss
@@ -8,6 +8,7 @@
   box-shadow: 0px 0px 1rem #5558;
   margin-bottom: 1rem;
   padding: 1rem;
+  width: 240px;
 
   .title {
     align-items: center;
@@ -61,10 +62,16 @@
 
     &__label {
       cursor: pointer;
+      color: $color-gray-dark-1;
+      font-size: 1rem;
+      transition: 0.4s;
+      &:hover {
+        color: $color-green-dark-2;
+      }
     }
 
     &__checkbox {
-      cursor: pointer;
+      @include checkbox-1;
     }
   }
 
