--- a/src/frontend/components/consumers/SortAndFilter/FilterDialog.module.scss
+++ b/src/frontend/components/consumers/SortAndFilter/FilterDialog.module.scss
@@ -9,74 +9,89 @@
   margin-bottom: 1rem;
   padding: 1rem;
   width: 240px;
+}
 
-  .title {
+.title {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+
+  &__name {
+    color: $color-gray-dark-1;
+    font-size: 1rem;
+  }
+
+  &__icon {
+    cursor: pointer;
+  }
+}
+
+.details {
+  border-bottom: 1px solid #aaa;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
+
+  &__summary {
     align-items: center;
+    cursor: pointer;
     display: flex;
-    flex-direction: row;
-    gap: 1rem;
     justify-content: space-between;
-    margin-bottom: 1.5rem;
+    list-style: none;
+    transition: 0.4s;
+    &:hover {
+      color: $color-green-dark-2;
+    }
 
-    .titleName {
-      color: $color-gray-dark-1;
+    &_span {
       font-size: 1rem;
     }
 
-    .titleIcon {
-      cursor: pointer;
-    }
-  }
-
-  .details {
-    border-bottom: 1px solid #aaa;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    padding-bottom: 1rem;
-
-    .summary {
-      align-items: center;
-      cursor: pointer;
-      display: flex;
-      justify-content: space-between;
-      list-style: none;
-
-      > span {
-        font-size: 1rem;
-      }
-
-      .angleIcon {
-        transition: 0.5s;
-      }
-    }
-
-    &[open] .angleIcon {
-      transform: rotate(180deg);
+    &__angleIcon {
       transition: 0.5s;
     }
   }
 
-  .action {
-    display: flex;
-    justify-content: space-between;
+  &[open] &__angleIcon {
+    transform: rotate(180deg);
+    transition: 0.5s;
+  }
+}
 
-    &__label {
-      cursor: pointer;
+.checkboxes {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.checkbox {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+
+  &__label {
+    cursor: pointer;
+    color: $color-gray-light-1;
+    font-size: 1rem;
+    transition: 0.4s;
+    &:hover {
+      color: $color-green-dark-2;
+    }
+    &_color_black {
       color: $color-gray-dark-1;
-      font-size: 1rem;
-      transition: 0.4s;
-      &:hover {
-        color: $color-green-dark-2;
-      }
-    }
-
-    &__checkbox {
-      @include checkbox-1;
     }
   }
 
-  .button {
-    @include button-2;
-    margin-top: 2rem;
+  &__checkbox {
+    @include checkbox-1;
   }
+}
+
+.button {
+  @include button-2;
+  margin-top: 2rem;
 }
