--- a/src/frontend/components/consumers/Button/Button.module.scss
+++ b/src/frontend/components/consumers/Button/Button.module.scss
@@ -9,7 +9,7 @@
   font-size: 1.125rem;
   transition: all 0.2s;
   max-width: 360px !important;
-  @media screen and (min-width: 768px) {
-    margin-inline: 0;
-  }
+  // @media screen and (min-width: 768px) {
+  // margin-inline: 0;
+  // }
 }
