--- a/src/frontend/components/consumers/OrderPageСlient/OrderPageСlient.module.scss
+++ b/src/frontend/components/consumers/OrderPageСlient/OrderPageСlient.module.scss
@@ -110,3 +110,10 @@
     margin-top: 10px;
   }
 }
+
+.buttonPayment {
+  display: block;
+  margin-top: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
