--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,6 +16,11 @@ $color-green-dark-1: #6ca170; // input focus
 $color-green-dark-2: #67b06c; // button bg, button text, links hover
 $color-green-dark-3: #008000; // success text, loader
 
+$color-orange-200: #ffc683;
+$color-orange-300: #ffad4d;
+$color-orange-400: #ff9920;
+$color-orange-500: #ff8a00;
+
 $color-red-1: #f32f04; // input border, error, action price
 
 $burger-menu-screen-width: 900px;
