--- a/src/frontend/components/consumers/Footer/Footer.module.scss
+++ b/src/frontend/components/consumers/Footer/Footer.module.scss
@@ -3,7 +3,7 @@
 @import "../../../../styles/variables";
 
 .footer {
-  background-color: $color-green-1;
+  background-color: rgba(#005d36, 0.35);
   padding: 20px 0;
   margin-top: 16px;
 
