--- a/src/frontend/components/consumers/SortAndFilter/FilterDialog.module.scss
+++ b/src/frontend/components/consumers/SortAndFilter/FilterDialog.module.scss
@@ -4,11 +4,17 @@
 
 .container {
   background-color: $color-bg-light-1;
-  border-radius: 1rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
   box-shadow: 0px 0px 1rem #5558;
   margin-bottom: 1rem;
   padding: 1rem;
-  width: 240px;
+  width: 100%;
+  @include md-min {
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    max-width: 260px;
+  }
 }
 
 .title {
