--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,7 +14,7 @@ $color-green-2: #85c78a; // input hover
 $color-green-3: #78cd7d; // button bg
 $color-green-dark-1: #6ca170; // input focus
 $color-green-dark-2: #67b06c; // button bg, button text, links hover
-$color-green-dark-3: #008000; // success text, loader
+$color-green-dark-3: #008000; // success text, loader, bg
 
 $color-orange-200: #ffc683;
 $color-orange-300: #ffad4d;
