--- a/src/frontend/components/consumers/NavBar/NavBar.module.scss
+++ b/src/frontend/components/consumers/NavBar/NavBar.module.scss
@@ -7,8 +7,11 @@
   z-index: 50;
 
   .headerContainer {
-    background-color: rgba(#005d36, 0.25);
-    padding: 0.5rem 0;
+    background-color: rgba($color-green-dark-3, 0.25);
+    padding: 0.75rem 0;
+    @include lg-min {
+      padding: 1rem 0;
+    }
 
     .headerItems {
       align-items: center;
@@ -31,10 +34,15 @@
 
       .logo {
         cursor: pointer;
-        color: $color-gray-dark-1;
-        font-size: 24px;
-        font-weight: 400;
-        text-decoration: none;
+        width: 140px;
+        @include lg-min {
+          width: 240px;
+        }
+        & > img {
+          display: block;
+          height: auto;
+          width: 100%;
+        }
       }
     }
   }
@@ -73,13 +81,14 @@
         background-color: $color-orange-500;
         border: none;
         border-radius: 3em;
-        color: $color-gray-dark-1;
+        color: $color-white;
         display: flex;
         font-size: 1em;
         justify-content: space-between;
         padding: 0.5em 1em;
         @media screen and (min-width: $burger-menu-screen-width) {
           background-color: transparent;
+          color: $color-gray-dark-1;
           padding: 0;
 
           > img {
