--- a/src/frontend/components/consumers/SortAndFilter/SortDialog.module.scss
+++ b/src/frontend/components/consumers/SortAndFilter/SortDialog.module.scss
@@ -5,13 +5,13 @@
 .container {
   background-color: $color-bg-light-1;
   border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
   box-shadow: 0px 0px 1rem #5558;
   margin-bottom: 1rem;
   padding: 1rem;
   width: 100%;
   @include md-min {
-    border-bottom-left-radius: 1rem;
+    border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
     margin-left: auto;
     max-width: 260px;
@@ -56,6 +56,7 @@
 
   .button {
     @include button-2;
+    color: $color-white;
     margin-top: 2rem;
   }
 }
