--- a/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
+++ b/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
@@ -81,7 +81,7 @@
       margin: 1rem 0;
 
       .measureLabel {
-        border: 1px solid #777;
+        border: 1px solid $color-orange-300;
         border-radius: 1rem;
         color: #777;
         cursor: pointer;
@@ -90,7 +90,7 @@
       }
 
       .measureRadioBtn:checked + label {
-        border: 2px solid $color-gray-dark-1;
+        border: 2px solid $color-orange-500;
         color: $color-gray-dark-1;
       }
     }
@@ -98,6 +98,7 @@
 
   .button {
     @include button-1;
+    color: $color-white;
     @media screen and (min-width: 768px) {
       grid-column: 2/3;
       grid-row: 4/5;
