--- a/src/frontend/pages/consumers/CartPage/CartPage.module.scss
+++ b/src/frontend/pages/consumers/CartPage/CartPage.module.scss
@@ -6,110 +6,140 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
 
-  .title {
-    display: none;
-    @media screen and (min-width: $burger-menu-screen-width) {
-      @include wrapper;
-      align-items: center;
-      display: flex;
-      gap: 1em;
-      margin-top: 1em;
-
-      .btnBack {
-        align-items: center;
-        background-color: $color-white;
-        border: 1px solid #999;
-        cursor: pointer;
-        border-radius: 50%;
-        display: flex;
-        font-size: 18px;
-        font-weight: bold;
-        height: 30px;
-        justify-content: center;
-        width: 30px;
-
-        &:hover {
-          background-color: $color-gray-light-1;
-        }
-      }
-
-      .titleText {
-        font-size: 2em;
-        font-weight: 600;
-      }
-    }
+.headline {
+  @include wrapper;
+  align-items: center;
+  background-color: $color-bg-light-1;
+  border-bottom: 1px solid #999;
+  display: flex;
+  padding-bottom: 0.5em !important;
+  padding-top: 0.5em !important;
+  @media screen and (min-width: $burger-menu-screen-width) {
+    background-color: transparent;
+    border-bottom: none;
   }
 
-  .productsWrapper {
-    flex: 1 1 auto;
-    margin-top: 3em;
-
-    .products {
-      display: grid;
-      gap: 2em;
-      list-style: none;
-      @include wrapper;
-      @include md-min {
-        grid-template-columns: repeat(2, 1fr);
-      }
-      @include lg-min {
-        grid-template-columns: repeat(3, 1fr);
-      }
-
-      .warning {
-        text-align: center;
-        margin: 30px 0;
-      }
-
-      .cartItem {
-        position: relative;
-      }
-    }
-  }
-
-  .price {
-    @include wrapper;
+  &__button {
     align-items: center;
-    background-color: #d9d9d9;
+    background-color: $color-orange-500;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
     display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
-    padding-top: 1rem !important;
+    font-size: 18px;
+    font-weight: bold;
+    height: 2rem;
+    justify-content: center;
+    margin-right: 1rem;
+    outline: none;
+    width: 2rem;
 
-    .caption {
-      color: $color-gray-dark-1;
-      font-size: 14px;
-    }
-
-    .sum {
-      color: $color-gray-dark-1;
-      font-size: 16px;
-      font-weight: 500;
+    &:hover {
+      background-color: $color-orange-300;
     }
   }
 
-  .linkToOrder {
+  &__text {
+    font-size: 1.125em;
+    font-weight: 500;
+    @media screen and (min-width: $burger-menu-screen-width) {
+      color: $color-gray-light-1;
+      font-size: 1.25em;
+    }
+  }
+}
+
+.productsWrapper {
+  flex: 1 1 auto;
+  margin-top: 3em;
+
+  .products {
+    display: grid;
+    gap: 2em;
+    list-style: none;
     @include wrapper;
+    @include md-min {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include lg-min {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    .warning {
+      text-align: center;
+      margin: 30px 0;
+    }
+
+    .cartItem {
+      position: relative;
+    }
+  }
+}
+
+.price {
+  @include wrapper;
+  align-items: center;
+  background-color: #d9d9d9;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+  padding-top: 1rem !important;
+
+  .caption {
+    color: $color-gray-dark-1;
+    font-size: 14px;
+  }
+
+  .sum {
+    color: $color-gray-dark-1;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+
+.linkToOrder {
+  @include wrapper;
+  background-color: #d9d9d9;
+
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+
+  & > a {
+    text-decoration: none;
+  }
+
+  .button {
+    @include button-1;
+    max-width: 100%;
+    text-decoration: none;
+  }
+}
+
+.emptyCart {
+  @include wrapper;
+  text-align: center;
+
+  &__icon {
     background-color: #d9d9d9;
-
-    padding-top: 1rem !important;
-    padding-bottom: 1rem !important;
-
-    & > a {
-      text-decoration: none;
-    }
-
-    .button {
-      @include button-1;
-      max-width: 100%;
-      text-decoration: none;
-    }
+    border-radius: 50%;
+    height: 70px;
+    margin: auto;
+    width: 70px;
   }
 
-  .warning {
-    @include wrapper;
-    font-size: 1.5em;
+  &__text {
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-block: 1.5rem;
+  }
+
+  &__link {
+    @include button-1;
+    color: $color-white;
+    margin: auto;
+    text-decoration: none;
   }
 }
 
