--- a/src/frontend/components/consumers/PathToPage/PathToPage.module.scss
+++ b/src/frontend/components/consumers/PathToPage/PathToPage.module.scss
@@ -5,34 +5,40 @@
 .path {
   @include wrapper;
   align-items: center;
-  background-color: $color-bg-light-1;
-  border-bottom: 1px solid #999;
   display: flex;
   padding-block: 0.5em !important;
-  @media screen and (min-width: $burger-menu-screen-width) {
-    background-color: transparent;
-    border-bottom: none;
-  }
 
   &__button {
-    align-items: center;
-    background-color: $color-orange-500;
+    background-color: transparent;
     border: none;
-    border-radius: 0.5rem;
     cursor: pointer;
-    display: flex;
-    font-size: 18px;
-    font-weight: bold;
-    height: 2rem;
-    justify-content: center;
     margin-right: 1rem;
+    padding: 0;
     outline: none;
-    width: 2rem;
+    width: 1.25rem;
     @media screen and (min-width: $burger-menu-screen-width) {
       display: none;
     }
-    &:hover {
+
+    &_image {
       background-color: $color-orange-300;
+      display: block;
+      height: 1.25rem;
+      mask-image: url("/assets/icon/icon-arrow-left.svg");
+      -webkit-mask-image: url("/assets/icon/icon-arrow-left.svg");
+      mask-repeat: no-repeat;
+      -webkit-mask-repeat: no-repeat;
+      mask-size: contain;
+      -webkit-mask-size: contain;
+      mask-position: center;
+      -webkit-mask-position: center;
+      margin-right: 0.5rem;
+      transition: 0.4s;
+      width: 1.25rem;
+
+      &:hover {
+        background-color: $color-orange-500;
+      }
     }
   }
 
@@ -50,6 +56,7 @@
   }
 
   &__text {
+    align-items: center;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -60,18 +67,46 @@
   }
 
   &__link {
-    color: inherit;
+    color: $color-gray-light-1;
     display: block;
     transition: 0.4s;
     min-width: fit-content;
+    text-decoration: none;
     &:hover {
       color: $color-orange-300;
     }
   }
 
+  &__linkImage {
+    background-color: $color-gray-light-1;
+    display: block;
+    height: 1rem;
+    mask-image: url("/assets/icon/icon-home.svg");
+    -webkit-mask-image: url("/assets/icon/icon-home.svg");
+    mask-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    mask-size: contain;
+    -webkit-mask-size: contain;
+    mask-position: center;
+    -webkit-mask-position: center;
+    margin-right: 0.5rem;
+    transition: 0.4s;
+    min-width: 1rem;
+    width: 1rem;
+
+    &:hover {
+      background-color: $color-orange-300;
+    }
+  }
+
   &__span {
+    color: $color-gray-light-1;
     display: block;
     margin-right: 0.5rem;
     min-width: fit-content;
+
+    &_black {
+      color: $color-black;
+    }
   }
 }
